--- a/template.html
+++ b/template.html
@@ -1,7 +1,18 @@
+<div class="dropdown inlineDD pull-right">
+    <button class="fontBtn" role="button" data-toggle="dropdown" aria-expanded="true"><i class="fa fa-filter" aria-hidden="true"></i></button>
+    
+</div>
+<!-- FILTER -->
+<button class="fontBtn" role="button" aria-expanded="true"><i class="fa fa-filter" aria-hidden="true"></i></button>
+<!-- SORT -->
+<button class="fontBtn"><i class="fa fa-caret-down" aria-hidden="true"></i></button>
+<button class="fontBtn" style="display:none;"><i class="fa fa-caret-up" aria-hidden="true"></i></button>
+<!-- ADD CLASS -->
+, new { @class = "form-control" }
 <!--Text Box-->
 <div class="field-wrapper">
-    <label for="lname" class="float_spl_label">Text</label>
-    <input type="text" name="lname" placeholder="Text" />
+    <label for="city" class="float_spl_label">City</label>
+    <input type="text" name="city" placeholder="City" />
 </div>
 <!--Select-->
 <div class="field-wrapper">
