--- a/Dynamic_Fields.html
+++ b/Dynamic_Fields.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,7 +22,7 @@
 <body class="nav-md footer_fixed">
     <div class="container body">
         <div class="main_container">
-            <div class="col-md-3 left_col left_back">
+            <div class="col-md-3 left_col left_back scrollerPane">
                 <div class=" scroll-view">
                     <div class="navbar nav_title" style="border: 0;">
                         <div class="logo_container">
