--- a/tripIndex.html
+++ b/tripIndex.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+	<div style="border:1px solid #ccc; width: 600px">
     <table width="600" border="0" cellpadding="0" cellspacing="0" style="font-family: arial;">
         <tr>
             <td colspan="3">
@@ -31,17 +32,38 @@
             </td>
         </tr>
         <tr>
-            <td style="padding: 5px; font-size: 14px; color: #777;">
+            <td style="padding: 5px 10px; font-size: 14px; color: #777; border-top: 1px solid #efefef;">
             	Check in: Nov 19, 11:30 AM
             </td>
-            <td style="padding: 5px; font-size: 14px; color: #777;">
+            <td align="center" style="padding: 5px; font-size: 14px; color: #777;border-top: 1px solid #efefef;">
             	Check out: Nov 20, 11:00 AM
             </td>
-            <td style="padding: 5px; font-size: 14px; color: #777;">
+            <td align="right" style="padding: 5px; font-size: 14px; color: #777;border-top: 1px solid #efefef;">
             	Guests: 3
             </td>
         </tr>
+        <tr>
+        	<td colspan="3"  style="padding: 5px; font-size: 15px; color: #555; border-top: 1px solid #efefef;">
+        		<table width="100%" border="0" cellpadding="10">
+        			<td style="width: 50%">Base Price</td>
+        			<td align="right">₹ 5000</td>
+        		</table>
+        		<table width="100%" border="0" cellpadding="10">
+        			<td style="width: 50%">Duration</td>
+        			<td align="right">1 night</td>
+        		</table>
+        		<table width="100%" border="0" cellpadding="10">
+        			<td style="width: 50%">Count</td>
+        			<td align="right">1 property</td>
+        		</table>
+        		<table width="100%" border="0" cellpadding="10">
+        			<td style="width: 50%">Internet Handling Fee</td>
+        			<td align="right">₹ 150</td>
+        		</table>
+        	</td>
+        </tr>
     </table>
+    <div>
 </body>
 
 </html>
